<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>openup</groupId>
    <artifactId>OpenUP-parent</artifactId>
    <name>OpenUP-parent</name>
    <packaging>pom</packaging>
    <version>1.0.0</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>

    <!-- Define dependency version information -->
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>4.13.1</version>
            </dependency>
            <dependency>
                <groupId>commons-httpclient</groupId>
                <artifactId>commons-httpclient</artifactId>
                <version>3.1</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/org.eclipse.persistence/jakarta.persistence -->
            <dependency>
                <groupId>org.eclipse.persistence</groupId>
                <artifactId>jakarta.persistence</artifactId>
                <version>2.2.3</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/javax.transaction/javax.transaction-api -->
            <dependency>
                <groupId>javax.transaction</groupId>
                <artifactId>javax.transaction-api</artifactId>
                <version>1.2</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/javax.security.enterprise/javax.security.enterprise-api -->
            <dependency>
                <groupId>javax.security.enterprise</groupId>
                <artifactId>javax.security.enterprise-api</artifactId>
                <version>1.0</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
            <dependency>
                <groupId>com.h2database</groupId>
                <artifactId>h2</artifactId>
                <version>1.4.200</version>
                <scope>test</scope>
            </dependency>
            <!-- https://mvnrepository.com/artifact/org.eclipse.microprofile.graphql/microprofile-graphql-api -->
            <dependency>
                <groupId>org.eclipse.microprofile.graphql</groupId>
                <artifactId>microprofile-graphql-api</artifactId>
                <version>1.0.2</version>
                <scope>provided</scope>
            </dependency>
            <!-- https://mvnrepository.com/artifact/org.eclipse.microprofile.context-propagation/microprofile-context-propagation-api -->
            <dependency>
                <groupId>org.eclipse.microprofile.context-propagation</groupId>
                <artifactId>microprofile-context-propagation-api</artifactId>
                <version>1.0.2</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/io.openliberty.features/jwt-1.0 -->
            <dependency>
                <groupId>io.openliberty.features</groupId>
                <artifactId>jwt-1.0</artifactId>
                <version>20.0.0.12</version>
                <type>esa</type>
            </dependency>
            <!-- https://mvnrepository.com/artifact/io.jaegertracing/jaeger-client -->
            <dependency>
                <groupId>io.jaegertracing</groupId>
                <artifactId>jaeger-client</artifactId>
                <version>0.34.3</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-jdk14 -->
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-jdk14</artifactId>
                <version>1.7.30</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/com.hazelcast/hazelcast-all -->
            <dependency>
                <groupId>com.hazelcast</groupId>
                <artifactId>hazelcast-all</artifactId>
                <version>4.0.3</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/javax.cache/cache-api -->
            <dependency>
                <groupId>javax.cache</groupId>
                <artifactId>cache-api</artifactId>
                <version>1.1.1</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/javax/javaee-web-api -->
            <dependency>
                <groupId>javax</groupId>
                <artifactId>javaee-web-api</artifactId>
                <version>8.0.1</version>
                <scope>provided</scope>
            </dependency>
            <!-- https://mvnrepository.com/artifact/org.eclipse.microprofile.rest.client/microprofile-rest-client-api -->
            <dependency>
                <groupId>org.eclipse.microprofile.rest.client</groupId>
                <artifactId>microprofile-rest-client-api</artifactId>
                <version>2.0</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <!-- Define and configure plugins -->
        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.1</version>
                    <configuration>
                        <encoding>UTF-8</encoding>
                        <source>1.8</source>
                        <target>1.8</target>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-war-plugin</artifactId>
                    <version>3.3.1</version>
                    <configuration>
                        <!-- Ignore error about missing web.xml -->
                        <failOnMissingWebXml>false</failOnMissingWebXml>
                        <archive>
                            <!-- Do not include META-INF/maven to avoid long file problems on windows -->
                            <addMavenDescriptor>false</addMavenDescriptor>
                        </archive>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.0.0-M5</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>3.0.0-M5</version>
                    <configuration>
                        <forkMode>once</forkMode>
                        <forkedProcessTimeoutInSeconds>300</forkedProcessTimeoutInSeconds>
                        <!-- Specify which test classes are integration tests -->
                        <includes>
                            <include>**/Test*.java</include>
                            <include>**/*Test.java</include>
                        </includes>
                    </configuration>
                    <executions>
                        <execution>
                            <goals>
                                <goal>integration-test</goal>
                                <goal>verify</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>io.openliberty.tools</groupId>
                    <artifactId>liberty-maven-plugin</artifactId>
                    <version>3.3.3</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.2.0</version>
                    <configuration>
                        <archive>
                            <!-- Do not include META-INF/maven to avoid long file problems on windows -->
                            <addMavenDescriptor>false</addMavenDescriptor>
                        </archive>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <profiles>
        <profile>
            <id>default-liberty</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <liberty.install.dir>../target/wlp</liberty.install.dir>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <groupId>io.openliberty.tools</groupId>
                        <artifactId>liberty-maven-plugin</artifactId>
                        <inherited>false</inherited>
                        <executions>
                            <execution>
                                <phase>package</phase>
                                <goals>
                                    <goal>install-server</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <assemblyInstallDirectory>${project.build.directory}</assemblyInstallDirectory>
                            <runtimeArtifact>
                                <artifactId>openliberty-runtime</artifactId>
                            </runtimeArtifact>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
       </profile>

       <profile>
            <id>custom-liberty</id>
            <activation>
                <property>
                    <name>libertyInstallDir</name>
                </property>
            </activation>
            <properties>
                <liberty.install.dir>${libertyInstallDir}</liberty.install.dir>
            </properties>
       </profile>

   </profiles>

    <modules>
        <module>EPF-schema</module>
        <module>OpenUP-client</module>
        <module>OpenUP-service</module>
        <module>OpenUP-gateway</module>
        <module>OpenUP-web</module>
        <module>OpenUP-test</module>
        <module>OpenUP-assembly</module>
    </modules>
</project>
